fix wrap bug

--- a/app/visit/page.module.css
+++ b/app/visit/page.module.css
@@ -67,6 +67,7 @@
     border: 2px solid var(--accent);
     border-left: none;
     border-right: none;
+    min-width: 320px;
 }
 .info > * {
     color: var(--background);
@@ -78,4 +79,5 @@
 .mapContainer {
     flex: 1;
     height: 30em;
+    min-width: 320px;
 }
